--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 
-@import url(https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700&subset=cyrillic-ext);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:regular,italic,700&display=swap&subset=cyrillic-ext);
+
+@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,700&display=swap&subset=cyrillic-ext);
 
 @font-face {
   font-family: "BravoRGRegular";
@@ -154,14 +156,31 @@ body._lock {
 }
 
 .btn {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  padding: 0px 0px;
+  display: inline-block;
+  min-height: 50px;
+  text-transform: uppercase;
+  color: #fff;
+  border: 3px solid #8e652f;
+  font-size: 15px;
+  line-height: 45px;
+  padding: 0px 45px;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  font-family: PFDin;
+  letter-spacing: 2px;
 }
 
 .btn._fw {
   width: 100%;
+}
+
+.btn_big {
+  font-size: 21px;
+  color: #000;
+  font-weight: 500;
+  letter-spacing: 0px;
+  padding: 0px 10px;
 }
 
 .select {
@@ -524,6 +543,10 @@ textarea.input {
   text-align: center;
 }
 
+.title {
+  text-align: center;
+}
+
 .title__item {
   font-family: "Ceremonious";
   font-size: 40px;
@@ -546,6 +569,316 @@ textarea.input {
 
 .title__main_w {
   color: #fff;
+}
+
+.block-header__title {
+  margin: 0px 0px 20px 0px;
+}
+
+.block-decor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.block-decor__items {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.block-decor__items:before {
+  content: "";
+  height: 1px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  background-color: #bb9c66;
+}
+
+.block-decor__items:after {
+  content: "";
+  height: 18px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 18px;
+          flex: 0 0 18px;
+  border: 1px solid #bb9c66;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  margin: 0px 5px;
+}
+
+.block-decor__items span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0px 5px;
+}
+
+.block-decor__items span:before {
+  content: "";
+  height: 10px;
+  width: 10px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 10px;
+          flex: 0 0 10px;
+  border: 1px solid #bb9c66;
+  border-radius: 50%;
+  margin: 0px 5px;
+}
+
+.block-decor__items span:after {
+  content: "";
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 10.8px;
+          flex: 0 0 10.8px;
+  height: 10.8px;
+  width: 10.8px;
+  border: 1px solid #bb9c66;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.block-decor__items:last-child {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.block-decor__items:last-child span {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.block-decor__icon {
+  text-align: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 145px;
+          flex: 0 0 145px;
+}
+
+.block-decor__icon img {
+  max-width: 70px;
+}
+
+.lot {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  text-align: center;
+}
+
+.lot__header {
+  text-align: center;
+  margin: 0px 0px 30px 0px;
+  position: relative;
+}
+
+.lot__image {
+  display: block;
+  padding: 0px 0px 98% 0px;
+  border: 3px solid #bb9c66;
+}
+
+.lot__title {
+  font-family: "PFDin";
+  text-transform: uppercase;
+  font-size: 21px;
+  line-height: calc(25 / 21);
+  font-weight: 500;
+  color: #000;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  position: relative;
+  z-index: 32;
+  margin: 0px 0px 1.28571em 0px;
+}
+
+.lot__btn {
+  margin: 0px 25px;
+}
+
+.timer-lot {
+  -webkit-transform: translate(-50%, 50%);
+      -ms-transform: translate(-50%, 50%);
+          transform: translate(-50%, 50%);
+  position: relative;
+  width: 72px;
+  height: 72px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2px 0px 0px 0px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+}
+
+.timer-lot div {
+  position: relative;
+  z-index: 2;
+}
+
+.timer-lot:before {
+  content: "";
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.timer-lot__icon {
+  margin: 0px 0px 5px 0px;
+}
+
+.timer-lot__item {
+  font-size: 18px;
+  font-family: "PT Sans Narrow";
+}
+
+.info-lot {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0px 0px 35px 0px;
+}
+
+.info-lot__statistic {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50px;
+          flex: 0 0 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.info-lot__icon {
+  width: 18px;
+  height: 18px;
+  position: relative;
+  margin: 0 auto 10px auto;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.info-lot__icon picture {
+  position: relative;
+  z-index: 2;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.info-lot__icon:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  position: absolute;
+}
+
+.info-lot__value {
+  font-size: 14px;
+  border-bottom: 1px solid #bb9c66;
+  padding: 0px 0px 5px 0px;
+}
+
+.info-lot__current-bet {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.current-bet-info-lot {
+  padding: 0px 5px;
+  position: relative;
+}
+
+.current-bet-info-lot:after {
+  content: "";
+  border: 1px solid #bb9c66;
+  position: absolute;
+  width: 72px;
+  height: 72px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+      -ms-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.current-bet-info-lot div {
+  position: relative;
+  z-index: 2;
+}
+
+.current-bet-info-lot__label {
+  margin: 0px 0px 5px 0px;
+}
+
+.current-bet-info-lot__value {
+  font-family: "BravoRGRegular";
+  font-size: 50px;
+  white-space: nowrap;
 }
 
 .row:after {
@@ -1180,6 +1513,21 @@ body.ie ._ibg img {
 .item-main-slider__content {
   position: relative;
   z-index: 2;
+  height: 100%;
+}
+
+.item-main-slider__content ._container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .item-main-slider__bg {
@@ -1196,34 +1544,19 @@ body.ie ._ibg img {
   font-size: 15px;
   max-width: 700px;
   margin: 25px auto 0px auto;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .item-main-slider__btn {
   margin: 55px 0px 0px 0px;
-  min-height: 50px;
-  text-transform: uppercase;
-  color: #fff;
-  border: 3px solid #8e652f;
-  font-size: 15px;
-  line-height: 45px;
-  padding: 0px 45px;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-  font-family: PFDin;
-  letter-spacing: 2px;
 }
-
-.item-main-slider__btn:hover {
-  border-color: #c3a774;
-}
-
-._no-webp .control-main-slider__arrow{
-  background: url("../img/icons/sl-arrow.png") 0 0 no-repeat; }
 
 .control-main-slider__arrow {
   position: relative;
   z-index: 2;
+  background: url("../img/icons/left.svg") 0 0 no-repeat;
   width: 14px;
   height: 24px;
   cursor: pointer;
@@ -1265,10 +1598,118 @@ body.ie ._ibg img {
   }
 }
 
+.lots {
+  padding: 85px 0px 65px 0px;
+}
+
+.lots__header {
+  margin: 0px 0px 40px 0px;
+}
+
+.slider-lots__body {
+  margin: 0px -50px 50px;
+}
+
+.slider-lots__body .swiper-wrapper {
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.slider-lots__slide {
+  padding: 0px 50px;
+}
+
+.control-slider-lots {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.control-slider-lots__arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  cursor: pointer;
+}
+
+.control-slider-lots__arrow span {
+  background: url("../img/icons/sl-arrow.svg") left no-repeat;
+  width: 108px;
+  height: 35px;
+  overflow: hidden;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 108px;
+          flex: 0 0 108px;
+}
+
+.control-slider-lots__arrow:after {
+  content: "";
+  margin: 0px 5px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: 2px solid #bb9c66;
+}
+
+.control-slider-lots__arrow:last-child {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.control-slider-lots__arrow:last-child span {
+  -webkit-transform: rotate(-180deg);
+      -ms-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+}
+
+._no-webp .control-slider-lots__link{
+  background: url(../img/icons/circle.png) 0 0 no-repeat; }
+
+.control-slider-lots__link {
+  height: 100px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100px;
+          flex: 0 0 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 21px;
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 500;
+  font-family: "PFDin";
+  margin: 0px 20px;
+}
+
 @media (min-width: 991.98px) {
   .quantity__button:hover::before,
   .quantity__button:hover::after {
     background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .lot__title:hover {
+    text-decoration: underline;
   }
 
   .menu__link:hover,
@@ -1282,6 +1723,10 @@ body.ie ._ibg img {
 }
 
 @media (min-width: 992px) {
+  .btn:hover {
+    border-color: #c3a774;
+  }
+
   .select__option:hover {
     background: #d9d9d9;
   }
@@ -1298,6 +1743,34 @@ body.ie ._ibg img {
 
   .select__options {
     font-size: 18px;
+  }
+}
+
+@media (max-width: 975px) {
+  .lot__title {
+    font-size: 18px;
+  }
+
+  .info-lot__current-bet {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+  }
+
+  .current-bet-info-lot {
+    padding: 0px 10px;
+  }
+
+  .current-bet-info-lot__value {
+    font-size: 35px;
+  }
+
+  .slider-lots__body {
+    margin: 0px -15px 50px;
+  }
+
+  .slider-lots__slide {
+    padding: 0px 15px;
   }
 }
 
@@ -1318,6 +1791,12 @@ body.ie ._ibg img {
 @media (max-width: 767.98px) {
   .title__main {
     font-size: 30px;
+  }
+
+  .block-decor__icon {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 95px;
+            flex: 0 0 95px;
   }
 
   .header__logo {
@@ -1448,6 +1927,14 @@ body.ie ._ibg img {
   }
 }
 
+@media (max-width: 450px) {
+  .control-slider-lots__arrow span {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50px;
+            flex: 0 0 50px;
+  }
+}
+
 ._webp .actions-header__region{ background: url(../img/icons/globe.webp) left no-repeat; }
 
 ._webp .user-header__link_1{ background: url(../img/icons/menu/01.webp) left center no-repeat; }
@@ -1458,4 +1945,4 @@ body.ie ._ibg img {
 
 ._webp .user-header__link_4{ background: url(../img/icons/menu/04.webp) left center no-repeat; }
 
-._webp .control-main-slider__arrow{ background: url(../img/icons/sl-arrow.webp) 0 0 no-repeat; }
+._webp .control-slider-lots__link{ background: url(../img/icons/circle.webp) 0 0 no-repeat; }
